* Trying to add some simple styling to the ReCaptcha box on the contact form

--- a/index.html
+++ b/index.html
@@ -222,9 +222,11 @@
                                 </div>
                             </div>
                         </div>
-
-                            <div data-netlify-recaptcha="true" class="w-full flex justify-center h-14 mx-auto border-none text-white"></div>
-
+                        <!-- Recaptcha -->
+                        <div class="mx-auto w-full flex justify-center h-12">
+                            <div data-netlify-recaptcha="true" class="border-none bg-primary text-white"></div>
+                        </div>
+                        <!-- Form Submit Button -->
                         <div class="px-4 py-3 text-right sm:px-6">
                             <button type="submit" class="submitButton bg-tertiary hover:bg-secondary text-center font-medium font-mono px-6 py-3 rounded-lg shadow drop-shadow">
                                 Send message
