* Submitting form successfully sends form content except the textarea input value. Tried fixing it by:
 1: Putting clearForm() inside the setTimeout function.

 2: Removing attribute (form="contact") from textarea-tag

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                                 </div>
                                 <div class="col-span-6 sm:col-span-3">
                                     <label for="message" class="block text-sm font-medium">Message</label>
-                                    <textarea form="contact" name="message" id="message" autocomplete="off" rows="10" cols="20" placeholder="Hi, this is my message..." wrap="hard" required class="mt-1 block w-full rounded-lg shadow shadow-inner focus:border-inferior focus:ring-inferior sm:text-sm text-secondary"></textarea>
+                                    <textarea name="message" id="message" autocomplete="off" rows="10" cols="20" placeholder="Hi, I am sending this message..." wrap="hard" required class="mt-1 block w-full rounded-lg shadow shadow-inner focus:border-inferior focus:ring-inferior sm:text-sm text-secondary"></textarea>
                                 </div>
                             </div>
                         </div>
