--- a/index.html
+++ b/index.html
@@ -14,28 +14,32 @@
     <script type="module" src="/src/js/pages.mjs" defer></script>
     <script type="module" src="/src/js/contact.mjs" defer></script>
 </head>
-<body class="bg-light">
-
+<body>
 <!-- NAVIGATION -->
-<nav class="mx-auto top-0 px-10 py-6 shadow shadow-lg drop-shadow bg-primary text-white">
-    <div class="flex justify-between gap-4 md:gap-12 lg:gap-24 w-full">
-        <!-- Nav Logos -->
-        <div>
-            <a href="/" class="home-page-btn">
-                <img class="block h-8 w-auto lg:hidden" src="/assets/icons/ff.svg" alt="Logo">
-                <img class="hidden h-8 w-auto lg:block" src="/assets/icons/ff.svg" alt="Logo">
-            </a>
-        </div>
-        <!-- Nav Links -->
-        <div class="w-full flex justify-between">
-            <a id="home-page-btn" class="home-page-btn cursor-pointer">Home</a>
-            <a id="about-page-btn" class="about-page-btn cursor-pointer">About</a>
-            <a id="portfolio-page-btn" class="portfolio-page-btn cursor-pointer">Portfolio</a>
-            <a id="contact-page-btn" class="contact-page-btn cursor-pointer">Contact</a>
+<nav class="bg-primary px-2 sm:px-4 py-2.5 rounded light:bg-primary-light shadow-lg drop-shadow">
+    <div class="container flex flex-wrap items-center justify-between mx-auto">
+        <!-- Navigation Logo -->
+        <a href="/" class="home-page-btn flex items-center">
+            <img class="block h-8 w-auto lg:hidden h-6 mr-3 sm:h-9" src="/assets/icons/ff.svg" alt="SaaDev Website Logo">
+            <img class="hidden h-8 w-auto lg:block h-6 mr-3 sm:h-9" src="/assets/icons/ff.svg" alt="SaaDev Website Logo">
+            <span class="self-center text-xl font-semibold whitespace-nowrap text-white light:text-primary-light">SaaDev</span>
+        </a>
+        <!-- Navigation Hamburger Icon Button -->
+        <button data-collapse-toggle="navbar" type="button" class="inline-flex items-center p-2 ml-3 text-sm light:text-primary rounded-lg md:hidden hover:bg-tertiary focus:outline-none focus:ring-2 focus:ring-tertiary light:text-primary light:hover:bg-primary light:focus:ring-tertiary-light " aria-controls="navbar" aria-expanded="false">
+            <span class="sr-only">Open main menu</span>
+            <svg class="w-6 h-6" aria-hidden="false" fill="white" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
+        </button>
+        <!-- Navigation Links -->
+        <div id="navbar" class="hidden w-full md:block md:w-auto">
+            <ul class="flex flex-col p-4 mt-4 border border-primary rounded-lg bg-primary md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0 light:bg-primary-light light:border-primary-light text-white">
+                <li><a id="home-page-btn" class="home-page-btn block py-2 pl-3 pr-4 rounded hover:bg-tertiary light:text-primary md:light:hover:text-primary light:hover:bg-primary-light light:hover:text-primary md:light:hover:bg-primary-light">Home</a></li>
+                <li><a id="about-page-btn" class="about-page-btn block py-2 pl-3 pr-4 rounded hover:bg-tertiary light:text-primary md:light:hover:text-primary light:hover:bg-primary-light light:hover:text-primary md:light:hover:bg-primary-light">About</a></li>
+                <li><a id="portfolio-page-btn" class="portfolio-page-btn block py-2 pl-3 pr-4 rounded hover:bg-tertiary light:text-primary md:light:hover:text-primary light:hover:bg-primary-light light:hover:text-primary md:light:hover:bg-primary-light">Portfolio</a></li>
+                <li><a id="contact-page-btn" class="contact-page-btn  block py-2 pl-3 pr-4 rounded hover:bg-tertiary light:text-primary md:light:hover:text-primary light:hover:bg-primary-light light:hover:text-primary md:light:hover:bg-primary-light">Contact</a></li>
+            </ul>
         </div>
     </div>
 </nav>
-
 <!-- CONTAINER -->
 <div class="mx-auto px-10 h-96">
     <!-- HOME -->
@@ -237,7 +241,6 @@
         </div>
     </section>
 </div>
-
 <!-- Successful Download Popup -->
 <div class="popup download-popup hidden text-white absolute top-28 left-0 right-0 z-10">
     <div class="flex justify-center">
@@ -257,7 +260,6 @@
         </div>
     </div>
 </div>
-
 <!-- Successful Submit Message Popup -->
 <div class="popup contact-popup hidden text-white absolute top-28 left-0 right-0 z-10">
     <div class="flex justify-center">
@@ -271,6 +273,5 @@
         </div>
     </div>
 </div>
-
 </body>
 </html>
